@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+23-Jun-2004
+~~~~~~~~~~~
+Let the panel autoscroll during a drag (Stephen Watson).
+
 18-Jun-2004
 ~~~~~~~~~~~
 Fix another bug when closing Properties window before it has finished
